[gd_scene load_steps=3 format=3 uid="uid://cbr5s3p6b4pp4"]

[ext_resource type="Script" uid="uid://c48daqvqi41cv" path="res://MagicGPSTestPlayer/test_enemy.gd" id="1_0v3n6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70rh2"]
size = Vector2(37, 36)

[node name="TestEnemy" type="CharacterBody2D"]
script = ExtResource("1_0v3n6")

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_70rh2")

[node name="RightFloorCast" type="RayCast2D" parent="."]
position = Vector2(19, 0)
target_position = Vector2(0, 24)

[node name="LeftFloorCast" type="RayCast2D" parent="."]
position = Vector2(-19, 0)
target_position = Vector2(0, 24)
